--- a/Translation.ipynb
+++ b/Translation.ipynb
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "unemb = load_unemb_only(model_size)"
+    "# unemb = load_unemb_only(model_size)"
    ]
   },
   {
