--- a/Translation.ipynb
+++ b/Translation.ipynb
@@ -155,10 +155,12 @@
     }
    ],
    "source": [
+    "print(\"HI\")\n",
     "if custom_model is not None:\n",
     "    llama = LlamaHelper(dir=custom_model, load_in_8bit=True, hf_token=hf_token)\n",
     "else:\n",
-    "    llama = LlamaHelper(dir='/dlabdata1/llama2_hf/Llama-2-%s-hf'%model_size, load_in_8bit=True)"
+    "    llama = LlamaHelper(dir='/dlabdata1/llama2_hf/Llama-2-%s-hf'%model_size, load_in_8bit=True)\n",
+    "print(\"Done\")"
    ]
   },
   {
