--- a/Translation.ipynb
+++ b/Translation.ipynb
@@ -371,6 +371,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "aaee5112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_en_de_fr.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d40cca6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df['prompt'].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "00e12355",
    "metadata": {},
