--- a/Cloze.ipynb
+++ b/Cloze.ipynb
@@ -66,7 +66,7 @@
     "model_size = '7b'\n",
     "custom_model = 'meta-llama/Llama-2-%s-hf'%model_size\n",
     "out_dir = './visuals'\n",
-    "hf_token = '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'"
+    "hf_token = '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'"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "prefix = \"./data/langs/\"\n",
-    "df_en_de = pd.read_csv(f'{prefix}{target_lang}/clean.csv')"
+    "df_en_de = pd.read_csv(f'{prefix}/translated_math_prompts.csv')"
    ]
   },
   {
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "key = \"blank_prompt_translation_masked\"\n",
+    "key = \"prompt in french\"\n",
     "dataset_gap = []\n",
     "n_skip = 2\n",
     "\n",
@@ -260,8 +260,8 @@
     "    prompt_template += f'{df_en_de[key][idx_examples[1]]}\\n' \n",
     "\n",
     "    # get tok sets and kick out if intersection\n",
-    "    out_token_str = row['word_translation']\n",
-    "    latent_token_str = row['word_original']\n",
+    "    out_token_str = row['answer in french']\n",
+    "    latent_token_str = row['answer_original']\n",
     "    out_token_id = process_tokens(out_token_str, tokenizer, target_lang)\n",
     "    latent_token_id = process_tokens(latent_token_str, tokenizer, 'en')\n",
     "    intersection = set(out_token_id).intersection(set(latent_token_id))\n",
@@ -272,7 +272,7 @@
     "    if target_lang == 'zh':\n",
     "        prompt = row[key].split(\"：\")[0]+\": \\\"\"\n",
     "    else: \n",
-    "        prompt = row[key].split(\":\")[0]+\": \\\"\"\n",
+    "        prompt = row[key].split(\"Réponse:\")[0]+\"Réponse: \\\"\"\n",
     "    dataset_gap.append({\n",
     "        'prompt': prompt_template + prompt,\n",
     "        'out_token_id': out_token_id,\n",
