--- a/Cloze.ipynb
+++ b/Cloze.ipynb
@@ -257,7 +257,7 @@
     "    indices = set(list(range(len(df_en_de)))) - set([idx])\n",
     "    idx_examples = np.random.choice(list(indices), n_skip, replace=False)\n",
     "    prompt_template += f'{df_en_de[key][idx_examples[0]]}\\n'\n",
-    "    prompt_template += f'{df_en_de[key][idx_examples[1]]}\\n' \n",
+    "    # prompt_template += f'{df_en_de[key][idx_examples[1]]}\\n' \n",
     "\n",
     "    # get tok sets and kick out if intersection\n",
     "    out_token_str = row['answer in french']\n",
