--- a/Cloze.ipynb
+++ b/Cloze.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "prefix = \"./data/langs/\"  \n",
-    "df_en_de = pd.read_csv(f'{prefix}/translated_math_prompts_first_150.csv')"
+    "df_en_de = pd.read_csv(f'{prefix}/new_data_fr_en.csv')"
    ]
   },
   {
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "key = \"prompt in french\"\n",
+    "key = \"blank_prompt_translation_masked\"\n",
     "dataset_gap = []\n",
     "n_skip = 2\n",
     "\n",
@@ -260,8 +260,8 @@
     "    prompt_template += f'{df_en_de[key][idx_examples[1]]}\\n' \n",
     "\n",
     "    # get tok sets and kick out if intersection\n",
-    "    out_token_str = row['answer in french']\n",
-    "    latent_token_str = row['answer_original']\n",
+    "    out_token_str = row['word_translation']\n",
+    "    latent_token_str = row['word_original']\n",
     "    out_token_id = process_tokens(out_token_str, tokenizer, target_lang)\n",
     "    latent_token_id = process_tokens(latent_token_str, tokenizer, 'en')\n",
     "    intersection = set(out_token_id).intersection(set(latent_token_id))\n",
