--- a/Cloze.ipynb
+++ b/Cloze.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "prefix = \"./data/langs/\"  \n",
-    "df_en_de = pd.read_csv(f'{prefix}/new_data_fr_en.csv')"
+    "df_en_de = pd.read_csv(f'{prefix}/new_data_fr_en_2.csv')"
    ]
   },
   {
